--- a/index.html
+++ b/index.html
@@ -7,10 +7,41 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Responsive Layout</title>
 </head>
-<body>
+
+
+
+
+<body class="debug">
     
-<header id="site_header"></header>
+
+
+
+<header id="site_header">
+    <div class="container d_flex .space_between">
+        <div class="logo"></div>
+        <div class="link_header"></div>
+    </div>
+</header>
 <!-- /#site_header -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <main id="site_main"></main>
 <!-- /#site_main -->
 <footer id="site_footer"></footer>
