--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
 
 
 
+<main id="site_main">
+
+<div class="demo">
+    <div class="container">
+        <div class="row">
+            <div class="col_12 col_md_8"></div>
+            <div class="col_12 col_md_4"></div>
+            <div class="col_12 col_md_4"></div>
+            <div class="col_12 col_md_4"></div>
+        </div>
+    </div>
+</div>
 
 
 
@@ -42,8 +54,46 @@
 
 
 
-<main id="site_main"></main>
+
+
+
+
+
+
+
+
+
+</main>
 <!-- /#site_main -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <footer id="site_footer"></footer>
 <!-- /#site_footer -->
 
