--- a/index.html
+++ b/index.html
@@ -43,6 +43,32 @@
         </div>
     </div>
 </div>
+<!-- /.demo -->
+
+
+<section class="planning">
+    <div class="container">
+        <div class="row">
+            <div class="col_12 col_lg_6"></div>
+            <!-- /.col_12 col_lg_6 -->
+            <div class="col_12 col_lg_6"></div>
+            <!-- /.col_12 col_lg_6 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
+<!-- /.planning -->
+
+
+
+
+
+
+
+
+
+
 
 
 
