add section testimonials blocks

--- a/index.html
+++ b/index.html
@@ -60,7 +60,34 @@
 </section>
 <!-- /.planning -->
 
-
+<section class="testimonials">
+    <div class="container">
+        <div class="expert_partners"></div>
+        <div class="testimonial d_flex">
+            <div class="avatar"></div>
+            <!-- /.avatar -->
+            <div class="bio"></div>
+            <!-- /.bio -->
+        </div>
+        <!-- /.testimonial d_flex -->
+        <div class="testimonial d_flex">
+            <div class="avatar"></div>
+            <!-- /.avatar -->
+            <div class="bio"></div>
+            <!-- /.bio -->
+        </div>
+        <!-- /.testimonial d_flex -->
+        <div class="testimonial d_flex">
+            <div class="avatar"></div>
+            <!-- /.avatar -->
+            <div class="bio"></div>
+            <!-- /.bio -->
+        </div>
+        <!-- /.testimonial d_flex -->
+    </div>
+    <!-- /.container -->
+</section>
+<!-- /.testimonials -->
 
 
 
