--- a/index.html
+++ b/index.html
@@ -89,7 +89,29 @@
 </section>
 <!-- /.testimonials -->
 
-
+<section class="benefits">
+    <div class="container">
+        <div class="title_benefit"></div>
+        <div class="row">
+            
+            <div class="col_12 col_md_6 col_lg_4"></div>
+            <!-- /.col_12 col_md_6 col_lg_4 -->
+            <div class="col_12 col_md_6 col_lg_4"></div>
+            <!-- /.col_12 col_md_6 col_lg_4 -->
+            <div class="col_12 col_md_6 col_lg_4"></div>
+            <!-- /.col_12 col_md_6 col_lg_4 -->
+            <div class="col_12 col_md_6 col_lg_4"></div>
+            <!-- /.col_12 col_md_6 col_lg_4 -->
+            <div class="col_12 col_md_6 col_lg_4"></div>
+            <!-- /.col_12 col_md_6 col_lg_4 -->
+            <div class="col_12 col_md_6 col_lg_4"></div>
+            <!-- /.col_12 col_md_6 col_lg_4 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
+<!-- /.benefits -->
 
 
 
