add section about blocks

--- a/index.html
+++ b/index.html
@@ -91,9 +91,14 @@
 
 <section class="benefits">
     <div class="container">
-        <div class="title_benefit"></div>
         <div class="row">
-            
+            <div class="col_12 d_flex justify_content_center">
+                <span>
+                    testo
+                </span>
+            </div>
+            <!-- /Text -->
+    
             <div class="col_12 col_md_6 col_lg_4"></div>
             <!-- /.col_12 col_md_6 col_lg_4 -->
             <div class="col_12 col_md_6 col_lg_4"></div>
@@ -114,7 +119,19 @@
 <!-- /.benefits -->
 
 
-
+<section class="about">
+    <div class="container">
+        <div class="row">
+            <div class="col_12 col_md_8 col_lg_8"></div>
+            <!-- /.col_12 col_md_6 col_lg_6 -->
+            <div class="col_12 col_md_4 col_lg_4"></div>
+            <!-- /.col_12 col_md_6 col_lg_6 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
+<!-- /.about -->
 
 
 
