add section call to action blocks

--- a/index.html
+++ b/index.html
@@ -134,7 +134,18 @@
 <!-- /.about -->
 
 
-
+<section class="call_to_action">
+        <div class="container justify_content_center">
+           <div class="text_main_bottom">testo</div>
+           <div class="text_main_bottom"></div>
+           <div class="text_main_bottom"></div>
+           <div class="text_main_bottom"></div>
+           <div class="text_main_bottom"></div>
+           <div class="text_main_bottom"></div>
+        </div>
+        <!-- /.container -->
+</section>
+<!-- /call_to_action -->
 
 
 
