add site_footer blocks

--- a/index.html
+++ b/index.html
@@ -26,11 +26,6 @@
 
 
 
-
-
-
-
-
 <main id="site_main">
 
 <div class="demo">
@@ -135,7 +130,7 @@
 
 
 <section class="call_to_action">
-        <div class="container justify_content_center">
+        <div class="container">
            <div class="text_main_bottom">testo</div>
            <div class="text_main_bottom"></div>
            <div class="text_main_bottom"></div>
@@ -146,58 +141,19 @@
         <!-- /.container -->
 </section>
 <!-- /call_to_action -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </main>
 <!-- /#site_main -->
 
 
 
+<footer id="site_footer">
+    <div class="container">
+        <div class="text_footer">testo</div>
+        <div class="text_footer"></div>
+     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<footer id="site_footer"></footer>
+</footer>
 <!-- /#site_footer -->
 
 
