add section demo

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
             <nav>
                 <ul class="d_flex align_center">
                     <li> <a href="#">Planning</a> </li>
-                    <li class="ml_2"> <a href="#">Testimonials</a> </li>
-                    <li class="ml_2"> <a href="#">Features</a> </li>
-                    <li class="ml_2"> <a href="#">About Us</a> </li>
-                    <li class="ml_2 bt_header"> <a href="#">
-                        <span>Get Started</span> </a> </li>
+                    <li class="pl_2"> <a href="#">Testimonials</a> </li>
+                    <li class="pl_2"> <a href="#">Features</a> </li>
+                    <li class="pl_2"> <a href="#">About Us</a> </li>
+                    <li class="pl_2 bt_header">
+                        <a href="#"><span>Get Started</span> 
+                        </a> 
+                    </li>
                 </ul>
                 <div class="d_none"> <a href="#" ><i class="white fa-regular fa-square-caret-down  fa-2x"></i></a>  </div>
             </nav>
@@ -46,14 +48,92 @@
 <div class="demo">
     <div class="container">
         <div class="row">
-            <div class="col_12 col_md_8"></div>
-            <div class="col_12 col_md_4"></div>
-            <div class="col_12 col_md_4"></div>
-            <div class="col_12 col_md_4"></div>
+            <div class="col_12 col_md_8 background">
+                <div class="col_12 col_md_6">
+                    <div class="get_a_demo pl_1 pt_2">
+                        <h3>Get a demo application</h3>
+                    </div>
+                    <div class="pl_1 pt_2">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi nisi atque porro dolores temporibus perferendis? Exercitationem atque modi a deserunt.</p>
+                    </div>
+                    <nav class="pl_1 pt_2">
+                        <a class="bt_app_store" href="#">
+                            <span class="white">
+                                <i class="fa-brands fa-apple"></i>
+                                App Store
+                            </span>
+                        </a>
+                    </nav>
+                 
+                </div>
+                <div class="col_12 col_md_6">
+                <img class="pt_2 phone" src="./assets/img/phone.png" alt="">
+                </div>
+            </div>
+
+            <div class="col_12 col_md_4 background">
+                <div class="logo_code">
+                    <i class="fa-solid fa-file-code fa-4x"></i>
+                    <div class="code">
+                        <span>Clean Code</span>
+                    </div>
+                </div> 
+                <div class="text_code">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, libero? Corrupti quaerat officiis ex, fuga eos laboriosam quisquam impedit. Quaerat.
+                    </p>
+                </div>
+            </div>
+
+            <div class="col_12 col_md_4 background">
+                <div class="logo_code">
+                    <i class="fa-solid fa-compass-drafting fa-4x"></i>
+                    <div class="code">
+                        <span>Clean Code</span>
+                    </div>
+                </div> 
+                <div class="text_code">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, libero? Corrupti quaerat officiis ex, fuga eos laboriosam quisquam impedit. Quaerat.
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="col_12 col_md_4 background">
+                <div class="logo_code">
+                    <i class="fa-solid fa-laptop-code fa-4x"></i>
+                    <div class="code">
+                        <span>Clean Code</span>
+                    </div>
+                </div> 
+                <div class="text_code">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, libero? Corrupti quaerat officiis ex, fuga eos laboriosam quisquam impedit. Quaerat.
+                    </p>
+                </div>
+            </div>
+            
+            <div class="col_12 col_md_4 background">
+                <div class="logo_code">
+                    <i class="fa-solid fa-bullhorn fa-4x"></i>
+                    <div class="code">
+                        <span>Clean Code</span>
+                    </div>
+                </div> 
+                <div class="text_code">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, libero? Corrupti quaerat officiis ex, fuga eos laboriosam quisquam impedit. Quaerat.
+                    </p>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
 <!-- /.demo -->
+
+
 
 
 <section class="planning">
