add section planning

--- a/index.html
+++ b/index.html
@@ -133,15 +133,22 @@
 </div>
 <!-- /.demo -->
 
-
-
-
 <section class="planning">
     <div class="container">
         <div class="row">
-            <div class="col_12 col_lg_6"></div>
+            <div class="col_12 col_lg_6">
+                <img class="img_planning_1" src="./assets/img/planning1.png" alt="Planning1">
+                <div class="pt_2 white">
+                    <h3> Strategic Planning </h3>
+                    <p class="pt_2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, eligendi animi doloremque provident voluptate placeat natus voluptatem labore non sed pariatur eius totam impedit ea quod dolor cupiditate modi distinctio nam. Officia eveniet qui placeat dolorem laudantium, ratione molestias nobis.</p>
+                </div>
+            </div>
+            
+
             <!-- /.col_12 col_lg_6 -->
-            <div class="col_12 col_lg_6"></div>
+            <div class="col_12 col_lg_6">
+                <img class="img_planning_2" src="./assets/img/planning2.png" alt="Planning2">
+            </div>
             <!-- /.col_12 col_lg_6 -->
         </div>
         <!-- /.row -->
@@ -149,6 +156,21 @@
     <!-- /.container -->
 </section>
 <!-- /.planning -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <section class="testimonials">
     <div class="container">
