--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<body class="debug">
+<body class="">
     
 
 
@@ -158,41 +158,87 @@
 <!-- /.planning -->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <section class="testimonials">
     <div class="container">
-        <div class="expert_partners"></div>
+        <div class="expert_partners col_12">
+            <div>
+                <span>TESTIMONIALS</span>
+            </div>
+            <div class="pt_1 title_testimonials">
+                 <h2>We are committed expert partners</h2>
+            </div>
+            <div class="pt_1"> 
+                <p>
+                    We place huge value on strong relationships and seen the benefit they bring to our business. Customer feedback is vital in helping us to get it right
+                </p>
+            </div>
+        </div>
+        <!-- /expert_partners -->
+        
+
         <div class="testimonial d_flex">
-            <div class="avatar"></div>
+            <div class="avatar col_12 col_md_3">
+                <img class="image_testimonial" src="./assets/img/testimonial1.jpg" alt="testimonial1">
+            </div>
             <!-- /.avatar -->
-            <div class="bio"></div>
+            <div class="bio col_12 col_md_9">
+                <span class="white">
+                    <i class="fa-solid fa-quote-left"></i> 
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe distinctio pariatur, sed dolores aspernatur quidem incidunt eveniet odio nulla omnis. 
+                    <i class="fa-solid fa-quote-left"></i>
+                </span>
+                <div class="white pt_1">
+                    <strong>
+                    NAT REYNOLDS
+                    </strong>
+                </div>
+            </div>
             <!-- /.bio -->
         </div>
         <!-- /.testimonial d_flex -->
+
+
         <div class="testimonial d_flex">
-            <div class="avatar"></div>
+            <div class="avatar col_12 col_md_3">
+                    <img class="image_testimonial" src="./assets/img/testimonial2.jpg" alt="testimonial2">
+            </div>
             <!-- /.avatar -->
-            <div class="bio"></div>
+            <div class="bio col_12 col_md_9">
+                <span class="white">
+                    <i class="fa-solid fa-quote-left"></i> 
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe distinctio pariatur, sed dolores aspernatur quidem incidunt eveniet odio nulla omnis. 
+                    <i class="fa-solid fa-quote-left"></i>
+                </span>
+                <div class="white pt_1">
+                    <strong>
+                    CELIA ALMEDA
+                    </strong>
+                </div>
+            </div>
             <!-- /.bio -->
         </div>
         <!-- /.testimonial d_flex -->
+
+
         <div class="testimonial d_flex">
-            <div class="avatar"></div>
+            <div class="avatar col_12 col_md_3">
+                <img class="image_testimonial" src="./assets/img/testimonial3.jpg" alt="testimonial3">
+            </div>
             <!-- /.avatar -->
-            <div class="bio"></div>
+            <div class="bio col_12 col_md_9">
+                <span class="white">
+                    <i class="fa-solid fa-quote-left"></i> 
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe distinctio pariatur, sed dolores aspernatur quidem incidunt eveniet odio nulla omnis. 
+                    <i class="fa-solid fa-quote-left"></i>
+                </span>
+                <div class="white pt_1">
+                    <strong>
+                    BOB ROBERTS
+                    </strong>
+                </div>
+            </div>
+
+            </div>
             <!-- /.bio -->
         </div>
         <!-- /.testimonial d_flex -->
@@ -200,6 +246,32 @@
     <!-- /.container -->
 </section>
 <!-- /.testimonials -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <section class="benefits">
     <div class="container">
