add section benefits

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
         </div>
         <!-- /expert_partners -->
-        
+
 
         <div class="testimonial d_flex">
             <div class="avatar col_12 col_md_3">
@@ -248,59 +248,147 @@
 <!-- /.testimonials -->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <section class="benefits">
     <div class="container">
-        <div class="row">
-            <div class="col_12 d_flex justify_content_center">
-                <span>
-                    testo
-                </span>
+        <div class="row pt_2">
+            <div class="col_12 d_flex justify_content_center align_center white">
+                <h2> Benefit of working with us </h2>
             </div>
             <!-- /Text -->
     
-            <div class="col_12 col_md_6 col_lg_4"></div>
+
+            <div class="col_12 col_md_6 col_lg_4 background_white">
+                <div class="numbers">
+                    <h2 class="number">01</h2>
+                </div>
+                <div>
+                    <span> Hight Quality </span>
+                </div>
+                <div class="black pt_1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
+                </div>
+                <div class="pt_2">
+                    <a class="bt_more" href="#">
+                        More
+                    </a>
+                </div>
+            </div>
             <!-- /.col_12 col_md_6 col_lg_4 -->
-            <div class="col_12 col_md_6 col_lg_4"></div>
+
+
+            <div class="col_12 col_md_6 col_lg_4 background_white">
+                <div class="numbers">
+                    <h2 class="number">01</h2>
+                </div>
+                <div>
+                    <span> Hight Quality </span>
+                </div>
+                <div class="black pt_1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
+                </div>
+                <div class="pt_2">
+                    <a class="bt_more" href="#">
+                        More
+                    </a>
+                </div>
+           </div>
             <!-- /.col_12 col_md_6 col_lg_4 -->
-            <div class="col_12 col_md_6 col_lg_4"></div>
+
+
+
+            <div class="col_12 col_md_6 col_lg_4 background_white">
+                <div class="numbers">
+                    <h2 class="number">01</h2>
+                </div>
+                <div>
+                    <span> Hight Quality </span>
+                </div>
+                <div class="black pt_1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
+                </div>
+                <div class="pt_2">
+                    <a class="bt_more" href="#">
+                        More
+                    </a>
+                </div>
+            </div>
             <!-- /.col_12 col_md_6 col_lg_4 -->
-            <div class="col_12 col_md_6 col_lg_4"></div>
+
+
+            <div class="col_12 col_md_6 col_lg_4 background_white">
+                <div class="numbers">
+                    <h2 class="number">01</h2>
+                </div>
+                <div>
+                    <span> Hight Quality </span>
+                </div>
+                <div class="black pt_1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
+                </div>
+                <div class="pt_2">
+                    <a class="bt_more" href="#">
+                        More
+                    </a>
+                </div>
+            </div>
             <!-- /.col_12 col_md_6 col_lg_4 -->
-            <div class="col_12 col_md_6 col_lg_4"></div>
+
+
+            <div class="col_12 col_md_6 col_lg_4 background_white">
+                <div class="numbers">
+                    <h2 class="number">01</h2>
+                </div>
+                <div>
+                    <span> Hight Quality </span>
+                </div>
+                <div class="black pt_1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
+                </div>
+                <div class="pt_2">
+                    <a class="bt_more" href="#">
+                        More
+                    </a>
+                </div>
+            </div>
             <!-- /.col_12 col_md_6 col_lg_4 -->
-            <div class="col_12 col_md_6 col_lg_4"></div>
+
+
+            <div class="col_12 col_md_6 col_lg_4 background_white">
+                <div class="numbers">
+                    <h2 class="number">01</h2>
+                </div>
+                <div>
+                    <span> Hight Quality </span>
+                </div>
+                <div class="black pt_1">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
+                </div>
+                <div class="pt_2">
+                    <a class="bt_more" href="#">
+                        More
+                    </a>
+                </div>
+            </div>
             <!-- /.col_12 col_md_6 col_lg_4 -->
+
         </div>
         <!-- /.row -->
     </div>
     <!-- /.container -->
 </section>
 <!-- /.benefits -->
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <section class="about">
