add section about

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<body class="">
+<body class="debug">
     
 
 
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="row">
             <div class="col_12 col_md_8 background">
-                <div class="col_12 col_md_6">
+                <div class="col_12  col_md_12 col_lg_6">
                     <div class="get_a_demo pl_1 pt_2">
                         <h3>Get a demo application</h3>
                     </div>
@@ -66,7 +66,7 @@
                     </nav>
                  
                 </div>
-                <div class="col_12 col_md_6">
+                <div class="col_12 col_md_8 col_lg_6">
                 <img class="pt_2 phone" src="./assets/img/phone.png" alt="">
                 </div>
             </div>
@@ -278,10 +278,10 @@
 
             <div class="col_12 col_md_6 col_lg_4 background_white">
                 <div class="numbers">
-                    <h2 class="number">01</h2>
+                    <h2 class="number">02</h2>
                 </div>
                 <div>
-                    <span> Hight Quality </span>
+                    <span> Creative Team </span>
                 </div>
                 <div class="black pt_1">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
@@ -298,10 +298,10 @@
 
             <div class="col_12 col_md_6 col_lg_4 background_white">
                 <div class="numbers">
-                    <h2 class="number">01</h2>
+                    <h2 class="number">03</h2>
                 </div>
                 <div>
-                    <span> Hight Quality </span>
+                    <span> Amazing Results </span>
                 </div>
                 <div class="black pt_1">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
@@ -317,10 +317,10 @@
 
             <div class="col_12 col_md_6 col_lg_4 background_white">
                 <div class="numbers">
-                    <h2 class="number">01</h2>
+                    <h2 class="number">04</h2>
                 </div>
                 <div>
-                    <span> Hight Quality </span>
+                    <span> Best Pricing </span>
                 </div>
                 <div class="black pt_1">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
@@ -336,10 +336,10 @@
 
             <div class="col_12 col_md_6 col_lg_4 background_white">
                 <div class="numbers">
-                    <h2 class="number">01</h2>
+                    <h2 class="number">05</h2>
                 </div>
                 <div>
-                    <span> Hight Quality </span>
+                    <span> innovations </span>
                 </div>
                 <div class="black pt_1">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
@@ -355,10 +355,10 @@
 
             <div class="col_12 col_md_6 col_lg_4 background_white">
                 <div class="numbers">
-                    <h2 class="number">01</h2>
+                    <h2 class="number">06</h2>
                 </div>
                 <div>
-                    <span> Hight Quality </span>
+                    <span> 04/7 Support </span>
                 </div>
                 <div class="black pt_1">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro necessitatibus pariatur architecto ipsum. Corrupti illum eaque reprehenderit facilis, ratione earum laboriosam aliquid quibusdam repellendus voluptates corporis obcaecati ipsa officia et!
@@ -379,24 +379,39 @@
 <!-- /.benefits -->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 <section class="about">
     <div class="container">
         <div class="row">
-            <div class="col_12 col_md_8 col_lg_8"></div>
+            <div class="col_12 col_md_8 col_lg_8">
+                <div class="title_about">
+                    <h2>About Us</h2>
+                </div>
+                <div class="text_about">
+                    <p class="pt_1">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi saepe illo voluptates harum delectus aut iusto exercitationem quae dolorem necessitatibus consectetur labore ullam molestias, ipsam adipisci nesciunt maxime earum corporis temporibus non porro tenetur cum distinctio! Totam in neque fugit nesciunt quasi hic vitae rerum recusandae, quidem aperiam perspiciatis nemo! Quibusdam error nisi ipsam. Fugiat sit repellendus quidem dignissimos velit. Inventore ex eaque voluptates expedita voluptatibus autem delectus unde enim.
+                    </p> <br>
+                    <p class="pt_1">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse deleniti nisi in. Quae expedita accusamus impedit officia eligendi. Architecto labore aspernatur animi veritatis voluptas exercitationem accusamus autem beatae. Quo quae quidem in ab repellendus? Fugiat dolor nam animi quam assumenda?
+                    </p>
+                </div>
+            </div>
             <!-- /.col_12 col_md_6 col_lg_6 -->
-            <div class="col_12 col_md_4 col_lg_4"></div>
+
+
+            <div class="col_12 col_md_4 col_lg_4">
+                <div class="img_about">
+                    <img class="image_about" src="./assets/img/about.jpg" alt="about">
+                    <i class="fa-solid fa-quote-left fa-4x"></i>
+                </div>
+                <div class="text_img">
+                    <p class="pt_1">
+                        I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.
+                    </p>
+                    <a class="btn_linkedin" href="#">
+                        <i class="fa-brands fa-linkedin"></i> Find me on linkedin
+                    </a>
+                </div>
+            </div>
             <!-- /.col_12 col_md_6 col_lg_6 -->
         </div>
         <!-- /.row -->
@@ -404,6 +419,23 @@
     <!-- /.container -->
 </section>
 <!-- /.about -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <section class="call_to_action">
@@ -418,8 +450,40 @@
         <!-- /.container -->
 </section>
 <!-- /call_to_action -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </main>
 <!-- /#site_main -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
