add section call to action and site_main

--- a/index.html
+++ b/index.html
@@ -421,31 +421,30 @@
 <!-- /.about -->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <section class="call_to_action">
         <div class="container">
-           <div class="text_main_bottom">testo</div>
-           <div class="text_main_bottom"></div>
-           <div class="text_main_bottom"></div>
-           <div class="text_main_bottom"></div>
-           <div class="text_main_bottom"></div>
-           <div class="text_main_bottom"></div>
+           <div class="text_main_bottom">
+            <span>GET STARTED</span>
+           </div>
+           <div class="text_main_bottom">
+            <h3>Simple, Transparent Pricing</h3>
+           </div>
+           <div class="text_main_bottom">
+            <h2>It's Free!</h2>
+           </div>
+           <div class="text_main_bottom">
+            <p>
+                We're still in beta and we will be for awhile. As we add more functionality, we'll look other plans with more controls.
+            </p>
+           </div>
+           <div class="text_main_bottom">
+            <a class="btn_large" href="#">
+                Get Started
+            </a>
+           </div>
+           <div class="text_main_bottom copyright">
+            Copyright 2023 Boolean <i class="fa-solid fa-circle"></i> Classe 91 <i class="fa-solid fa-circle"></i> <a href="#">Privacy policy</a>
+           </div>
         </div>
         <!-- /.container -->
 </section>
