--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<body class="debug">
+<body class="">
     
 
 
@@ -451,45 +451,22 @@
 <!-- /call_to_action -->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </main>
 <!-- /#site_main -->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <footer id="site_footer">
     <div class="container">
-        <div class="text_footer">testo</div>
-        <div class="text_footer"></div>
+        <div class="text_footer">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa voluptates saepe ipsum reprehenderit fugiat perferendis ea!
+            </p>
+        </div>
+        <div class="text_footer">
+            <span>
+                <a href="#">Lorem ipsum</a> scelerique mauris pallentesque <a href="#">Boolean Careers</a>
+            </span>
+        </div>
      </div>
 
 
