add edit header, font-family and edit margin .row

--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
 <header id="site_header">
     <div class="container d_flex">
         <div class="logo">
-            <img class="image_logo" src="./assets/img/logo.png" alt="Logo">
+            <a href="#">
+                 <img class="image_logo" src="./assets/img/logo.png" alt="Logo">
+            <a>
         </div>
         <div class="link_header">
             <nav>
                 <ul class="d_flex align_center">
-                    <li> <a href="#">Planning</a> </li>
-                    <li class="pl_2"> <a href="#">Testimonials</a> </li>
-                    <li class="pl_2"> <a href="#">Features</a> </li>
-                    <li class="pl_2"> <a href="#">About Us</a> </li>
+                    <li> <a href="#planning">Planning</a> </li>
+                    <li class="pl_2"> <a href="#testimonials">Testimonials</a> </li>
+                    <li class="pl_2"> <a href="#benefits">Features</a> </li>
+                    <li class="pl_2"> <a href="#about">About Us</a> </li>
                     <li class="pl_2 bt_header">
                         <a href="#"><span>Get Started</span> 
                         </a> 
@@ -40,7 +42,6 @@
     </div>
 </header>
 <!-- /#site_header -->
-
 
 
 <main id="site_main">
@@ -133,7 +134,7 @@
 </div>
 <!-- /.demo -->
 
-<section class="planning">
+<section id="planning">
     <div class="container">
         <div class="row">
             <div class="col_12 col_lg_6">
@@ -158,7 +159,7 @@
 <!-- /.planning -->
 
 
-<section class="testimonials">
+<section id="testimonials">
     <div class="container">
         <div class="expert_partners col_12">
             <div>
@@ -248,7 +249,7 @@
 <!-- /.testimonials -->
 
 
-<section class="benefits">
+<section id="benefits">
     <div class="container">
         <div class="row pt_2">
             <div class="col_12 d_flex justify_content_center align_center white">
@@ -379,7 +380,7 @@
 <!-- /.benefits -->
 
 
-<section class="about">
+<section id="about">
     <div class="container">
         <div class="row">
             <div class="col_12 col_md_8 col_lg_8">
