add edit section planning img_planninig_2

--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
 </head>
 
 
-
-
 <body class="">
     
-
-
 
 <header id="site_header">
     <div class="container d_flex">
@@ -148,7 +144,20 @@
 
             <!-- /.col_12 col_lg_6 -->
             <div class="col_12 col_lg_6">
-                <img class="img_planning_2" src="./assets/img/planning2.png" alt="Planning2">
+                <div class="img_planning_2">
+                     <img class="image_planning_2" src="./assets/img/planning2.png" alt="Planning2">
+                     <div class="pt_1">
+                        <strong>
+                            App Development
+                        </strong>
+                     </div>
+                     <div class="pt_1">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex ducimus voluptates aliquam maiores hic tempora.</p>
+                     </div>
+                     <div class="pt_2">
+                        <a class="btn_app" href="#"><i class="fa-solid fa-arrow-down"></i></a>
+                     </div>
+                </div>
             </div>
             <!-- /.col_12 col_lg_6 -->
         </div>
